--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -25,7 +25,7 @@
     "@types/chai": "4.3.0",
     "@types/chai-http": "4.2.0",
     "@types/cors": "2.8.12",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "8.5.6",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.7",
