--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "camelcase": "6.3.0",
+    "express": "^4.18.2",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "puppeteer": "13.2.0",
